Service process section updated

--- a/services/Cybersecurity-Awareness-Campaign-and-Training/index.html
+++ b/services/Cybersecurity-Awareness-Campaign-and-Training/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Cybersecurity Awareness Campaign & Training &#8211; Duradars</title>
-
+	<link rel="stylesheet" href="../services.css">
 	<link rel="stylesheet" href="../../assets/font-awesome-pro-master/css/all.min.css">
 
 	<meta name='robots' content='max-image-preview:large' />
@@ -1105,81 +1105,42 @@
 							</div>
 						</div>
 					</div>
-					<div class="elementor-element elementor-element-9727257 e-con-full e-flex e-con e-child" data-id="9727257"
-						data-element_type="container">
-						<div
-							class="elementor-element elementor-element-9b0ca51 elementor-view-stacked elementor-shape-circle elementor-position-top elementor-mobile-position-top elementor-widget elementor-widget-icon-box"
-							data-id="9b0ca51" data-element_type="widget" data-widget_type="icon-box.default">
-							<div class="elementor-widget-container">
-								<div class="elementor-icon-box-wrapper">
 
-
-									<div class="elementor-icon-box-content">
-
-										<h3 class="elementor-icon-box-title">
-											<span>1. Needs Assessment</span>
-										</h3>
-
-										<p class="elementor-icon-box-description">
-											We assess the unique needs of your organization and employees to tailor training sessions
-											accordingly.
-										</p>
-
+					<section class="process-section">
+						<div class="container">
+							<h1 class="section-title">Process</h1>
+							<div class="timeline">
+								<div class="timeline-step">
+									<div class="dot"></div>
+									<div class="content">
+										<h2>Needs Assessment</h2>
+										<p>We assess the unique needs of your organization and employees to tailor training sessions
+											accordingly.</p>
 									</div>
-
 								</div>
+
+								<div class="timeline-step">
+									<div class="dot"></div>
+									<div class="content">
+										<h2>Training Delivery</h2>
+										<p>We provide interactive and engaging training to ensure your employees fully understand
+											cybersecurity risks and best practices.</p>
+									</div>
+								</div>
+
+								<div class="timeline-step">
+									<div class="dot"></div>
+									<div class="content">
+										<h2>Continuous Evaluation</h2>
+										<p>We evaluate the effectiveness of the training programs and conduct ongoing simulations to ensure
+											your team remains vigilant.</p>
+									</div>
+								</div>
+
 							</div>
 						</div>
-						<div
-							class="elementor-element elementor-element-ff4921e elementor-view-stacked elementor-shape-circle elementor-position-top elementor-mobile-position-top elementor-widget elementor-widget-icon-box"
-							data-id="ff4921e" data-element_type="widget" data-widget_type="icon-box.default">
-							<div class="elementor-widget-container">
-								<div class="elementor-icon-box-wrapper">
+					</section>
 
-
-
-									<div class="elementor-icon-box-content">
-
-										<h3 class="elementor-icon-box-title">
-											<span>2. Training Delivery</span>
-										</h3>
-
-										<p class="elementor-icon-box-description">
-											We provide interactive and engaging training to ensure your employees fully understand
-											cybersecurity risks and best practices.
-										</p>
-
-									</div>
-
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="elementor-element elementor-element-cfd62d5 e-con-full e-flex e-con e-child" data-id="cfd62d5"
-						data-element_type="container">
-						<div
-							class="elementor-element elementor-element-3217de0 elementor-view-stacked elementor-shape-circle elementor-position-top elementor-mobile-position-top elementor-widget elementor-widget-icon-box"
-							data-id="3217de0" data-element_type="widget" data-widget_type="icon-box.default">
-							<div class="elementor-widget-container">
-								<div class="elementor-icon-box-wrapper">
-
-									<div class="elementor-icon-box-content">
-
-										<h3 class="elementor-icon-box-title">
-											<span>3. Continuous Evaluation</span>
-										</h3>
-
-										<p class="elementor-icon-box-description">
-											We evaluate the effectiveness of the training programs and conduct ongoing simulations to ensure
-											your team remains vigilant.
-										</p>
-
-									</div>
-
-								</div>
-							</div>
-						</div>
-					</div>
 				</div>
 				<div class="elementor-element elementor-element-e240be0 e-con-full e-flex e-con e-child" data-id="e240be0"
 					data-element_type="container">
