--- a/services/OSINT/index.html
+++ b/services/OSINT/index.html
@@ -6,6 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>OSINT &#8211; Duradars</title>
 
+	<link rel="stylesheet" href="../services.css">
+
 	<link rel="stylesheet" href="../../assets/font-awesome-pro-master/css/all.min.css">
 
 	<meta name='robots' content='max-image-preview:large' />
@@ -1069,78 +1071,39 @@
 							</div>
 						</div>
 					</div>
-					<div class="elementor-element elementor-element-9727257 e-con-full e-flex e-con e-child" data-id="9727257"
-						data-element_type="container">
-						<div
-							class="elementor-element elementor-element-9b0ca51 elementor-view-stacked elementor-shape-circle elementor-position-top elementor-mobile-position-top elementor-widget elementor-widget-icon-box"
-							data-id="9b0ca51" data-element_type="widget" data-widget_type="icon-box.default">
-							<div class="elementor-widget-container">
-								<div class="elementor-icon-box-wrapper">
 
-
-									<div class="elementor-icon-box-content">
-
-										<h3 class="elementor-icon-box-title">
-											<span>1. Data Collection</span>
-										</h3>
-
-										<p class="elementor-icon-box-description">
-											We collect relevant open-source data from various channels, including social media, domain data, and the dark web.
-										</p>
-
+					<section class="process-section">
+						<div class="container">
+							<h1 class="section-title">Process</h1>
+							<div class="timeline">
+								<div class="timeline-step">
+									<div class="dot"></div>
+									<div class="content">
+										<h2>Data Collection</h2>
+										<p>We collect relevant open-source data from various channels, including social media, domain data, and the dark web.</p>
 									</div>
-
 								</div>
+
+								<div class="timeline-step">
+									<div class="dot"></div>
+									<div class="content">
+										<h2>Analysis</h2>
+										<p>Our experts analyze the collected data to identify potential threats or risks.</p>
+									</div>
+								</div>
+
+								<div class="timeline-step">
+									<div class="dot"></div>
+									<div class="content">
+										<h2>Reporting</h2>
+										<p>We provide actionable intelligence in easy-to-understand reports that support your risk management decisions.</p>
+									</div>
+								</div>
+
 							</div>
 						</div>
-						<div
-							class="elementor-element elementor-element-ff4921e elementor-view-stacked elementor-shape-circle elementor-position-top elementor-mobile-position-top elementor-widget elementor-widget-icon-box"
-							data-id="ff4921e" data-element_type="widget" data-widget_type="icon-box.default">
-							<div class="elementor-widget-container">
-								<div class="elementor-icon-box-wrapper">
+					</section>
 
-
-
-									<div class="elementor-icon-box-content">
-
-										<h3 class="elementor-icon-box-title">
-											<span>2. Analysis</span>
-										</h3>
-
-										<p class="elementor-icon-box-description">
-											Our experts analyze the collected data to identify potential threats or risks.
-										</p>
-
-									</div>
-
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="elementor-element elementor-element-cfd62d5 e-con-full e-flex e-con e-child" data-id="cfd62d5"
-						data-element_type="container">
-						<div
-							class="elementor-element elementor-element-3217de0 elementor-view-stacked elementor-shape-circle elementor-position-top elementor-mobile-position-top elementor-widget elementor-widget-icon-box"
-							data-id="3217de0" data-element_type="widget" data-widget_type="icon-box.default">
-							<div class="elementor-widget-container">
-								<div class="elementor-icon-box-wrapper">
-
-									<div class="elementor-icon-box-content">
-
-										<h3 class="elementor-icon-box-title">
-											<span>3. Reporting</span>
-										</h3>
-
-										<p class="elementor-icon-box-description">
-											We provide actionable intelligence in easy-to-understand reports that support your risk management decisions.
-										</p>
-
-									</div>
-
-								</div>
-							</div>
-						</div>
-					</div>
 				</div>
 				<div class="elementor-element elementor-element-e240be0 e-con-full e-flex e-con e-child" data-id="e240be0"
 					data-element_type="container">
