--- a/services/Security-Monitoring/index.html
+++ b/services/Security-Monitoring/index.html
@@ -6,6 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Security Monitoring &#8211; Duradars</title>
 
+	<link rel="stylesheet" href="../services.css">
+
 	<link rel="stylesheet" href="../../assets/font-awesome-pro-master/css/all.min.css">
 
 	<meta name='robots' content='max-image-preview:large' />
@@ -1071,78 +1073,39 @@
 							</div>
 						</div>
 					</div>
-					<div class="elementor-element elementor-element-9727257 e-con-full e-flex e-con e-child" data-id="9727257"
-						data-element_type="container">
-						<div
-							class="elementor-element elementor-element-9b0ca51 elementor-view-stacked elementor-shape-circle elementor-position-top elementor-mobile-position-top elementor-widget elementor-widget-icon-box"
-							data-id="9b0ca51" data-element_type="widget" data-widget_type="icon-box.default">
-							<div class="elementor-widget-container">
-								<div class="elementor-icon-box-wrapper">
 
-
-									<div class="elementor-icon-box-content">
-
-										<h3 class="elementor-icon-box-title">
-											<span>1. Continuous Monitoring</span>
-										</h3>
-
-										<p class="elementor-icon-box-description">
-											We continuously monitor your network, endpoints, and systems for signs of malicious activity or vulnerabilities.
-										</p>
-
+					<section class="process-section">
+						<div class="container">
+							<h1 class="section-title">Process</h1>
+							<div class="timeline">
+								<div class="timeline-step">
+									<div class="dot"></div>
+									<div class="content">
+										<h2>Continuous Monitoring</h2>
+										<p>We continuously monitor your network, endpoints, and systems for signs of malicious activity or vulnerabilities.</p>
 									</div>
-
 								</div>
+
+								<div class="timeline-step">
+									<div class="dot"></div>
+									<div class="content">
+										<h2>Threat Detection</h2>
+										<p>Our team utilizes advanced tools to detect potential threats in real-time.</p>
+									</div>
+								</div>
+
+								<div class="timeline-step">
+									<div class="dot"></div>
+									<div class="content">
+										<h2>Incident Response</h2>
+										<p>When a threat is identified, we act immediately to contain and resolve the incident, minimizing damage.</p>
+									</div>
+								</div>
+
 							</div>
 						</div>
-						<div
-							class="elementor-element elementor-element-ff4921e elementor-view-stacked elementor-shape-circle elementor-position-top elementor-mobile-position-top elementor-widget elementor-widget-icon-box"
-							data-id="ff4921e" data-element_type="widget" data-widget_type="icon-box.default">
-							<div class="elementor-widget-container">
-								<div class="elementor-icon-box-wrapper">
+					</section>
 
-
-
-									<div class="elementor-icon-box-content">
-
-										<h3 class="elementor-icon-box-title">
-											<span>2. Threat Detection</span>
-										</h3>
-
-										<p class="elementor-icon-box-description">
-											Our team utilizes advanced tools to detect potential threats in real-time.
-										</p>
-
-									</div>
-
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="elementor-element elementor-element-cfd62d5 e-con-full e-flex e-con e-child" data-id="cfd62d5"
-						data-element_type="container">
-						<div
-							class="elementor-element elementor-element-3217de0 elementor-view-stacked elementor-shape-circle elementor-position-top elementor-mobile-position-top elementor-widget elementor-widget-icon-box"
-							data-id="3217de0" data-element_type="widget" data-widget_type="icon-box.default">
-							<div class="elementor-widget-container">
-								<div class="elementor-icon-box-wrapper">
-
-									<div class="elementor-icon-box-content">
-
-										<h3 class="elementor-icon-box-title">
-											<span>3. Incident Response</span>
-										</h3>
-
-										<p class="elementor-icon-box-description">
-											When a threat is identified, we act immediately to contain and resolve the incident, minimizing damage.
-										</p>
-
-									</div>
-
-								</div>
-							</div>
-						</div>
-					</div>
 				</div>
 				<div class="elementor-element elementor-element-e240be0 e-con-full e-flex e-con e-child" data-id="e240be0"
 					data-element_type="container">
