--- a/services/VAPT/index.html
+++ b/services/VAPT/index.html
@@ -765,7 +765,8 @@
 															<path
 																d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z" />
 														</svg> </a>
-													<ul class="elementskit-dropdown elementskit-submenu-panel" style="min-width: 350px; border-radius: 15px !important; overflow: hidden;">
+													<ul class="elementskit-dropdown elementskit-submenu-panel"
+														style="min-width: 350px; border-radius: 15px !important; overflow: hidden;">
 														<li id="menu-item-56"
 															class="menu-item menu-item-type-post_type menu-item-object-page menu-item-56 nav-item elementskit-mobile-builder-content"
 															data-vertical-menu=750px><a href="/services/VAPT/" style="background-color:#9761F4;"
@@ -1087,180 +1088,48 @@
 						</div>
 					</div>
 
-<!-- 
-					<div class="timeline">
-						<div class="timeline__event  animated fadeInUp delay-3s timeline__event--type1">
-							<div class="timeline__event__icon ">
-								<i class="lni-cake"></i>
-
-							</div>
-							<div class="timeline__event__date">
-								Initial Consultation
-
-							</div>
-							<div class="timeline__event__content ">
-								<div class="timeline__event__title">
-								</div>
-								<div class="timeline__event__description">
-									<p>We begin by understanding your organization’s infrastructure, objectives, and potential security
-										concerns.</p>
-								</div>
-							</div>
-						</div>
-						<div class="timeline__event animated fadeInUp delay-2s timeline__event--type2">
-							<div class="timeline__event__icon">
-								<i class="lni-burger"></i>
-
-							</div>
-							<div class="timeline__event__date">
-								Assessment and Testing
-							</div>
-							<div class="timeline__event__content">
-								<div class="timeline__event__title">
-								</div>
-								<div class="timeline__event__description">
-									<p>Our security experts perform rigorous testing to simulate attacks across your network, web
-										applications, mobile apps, and wireless networks.</p>
-								</div>
-							</div>
-						</div>
-						<div class="timeline__event animated fadeInUp delay-1s timeline__event--type3">
-							<div class="timeline__event__icon">
-								<i class="lni-slim"></i>
-
-							</div>
-							<div class="timeline__event__date">
-								Analysis and Reporting
-							</div>
-							<div class="timeline__event__content">
-								<div class="timeline__event__title">
-								</div>
-								<div class="timeline__event__description">
-									<p>We deliver detailed reports that identify vulnerabilities and provide actionable insights for
-										mitigation.</p>
-								</div>
-
-							</div>
-						</div>
-						<div class="timeline__event animated fadeInUp timeline__event--type1">
-							<div class="timeline__event__icon">
-								<i class="lni-cake"></i>
-
-							</div>
-							<div class="timeline__event__date">
-								Remediation Guidance
-							</div>
-							<div class="timeline__event__content">
-								<div class="timeline__event__title">
-								</div>
-								<div class="timeline__event__description">
-									<p>We assist your team in fixing the vulnerabilities, ensuring your environment is protected from
-										future attacks.</p>
-								</div>
-							</div>
-						</div>
-
-					</div> -->
-
-
-					<div class="elementor-element elementor-element-9727257 e-con-full e-flex e-con e-child" data-id="9727257"
-						data-element_type="container">
-						<div
-							class="elementor-element elementor-element-9b0ca51 elementor-view-stacked elementor-shape-circle elementor-position-top elementor-mobile-position-top elementor-widget elementor-widget-icon-box"
-							data-id="9b0ca51" data-element_type="widget" data-widget_type="icon-box.default">
-							<div class="elementor-widget-container">
-								<div class="elementor-icon-box-wrapper">
-
-
-									<div class="elementor-icon-box-content">
-
-										<h3 class="elementor-icon-box-title">
-											<span>1. Initial Consultation</span>
-										</h3>
-
-										<p class="elementor-icon-box-description">
-											We begin by understanding your organization’s infrastructure, objectives, and potential security
-											concerns.
-										</p>
-
+					<section class="process-section">
+						<div class="container">
+							<h1 class="section-title">Process</h1>
+							<div class="timeline">
+								<div class="timeline-step">
+									<div class="dot"></div>
+									<div class="content">
+										<h2>Initial Consultation</h2>
+										<p>We begin by understanding your organization’s infrastructure, objectives, and potential security
+											concerns.</p>
 									</div>
-
 								</div>
-							</div>
-						</div>
-						<div
-							class="elementor-element elementor-element-ff4921e elementor-view-stacked elementor-shape-circle elementor-position-top elementor-mobile-position-top elementor-widget elementor-widget-icon-box"
-							data-id="ff4921e" data-element_type="widget" data-widget_type="icon-box.default">
-							<div class="elementor-widget-container">
-								<div class="elementor-icon-box-wrapper">
 
-
-
-									<div class="elementor-icon-box-content">
-
-										<h3 class="elementor-icon-box-title">
-											<span>2. Assessment and Testing</span>
-										</h3>
-
-										<p class="elementor-icon-box-description">
-											Our security experts perform rigorous testing to simulate attacks across your network, web
-											applications, mobile apps, and wireless networks.
-										</p>
-
+								<div class="timeline-step">
+									<div class="dot"></div>
+									<div class="content">
+										<h2>Assessment and Testing</h2>
+										<p>Our security experts perform rigorous testing to simulate attacks across your network, web
+											applications, mobile apps, and wireless networks.</p>
 									</div>
-
 								</div>
-							</div>
-						</div>
-					</div>
-					<div class="elementor-element elementor-element-cfd62d5 e-con-full e-flex e-con e-child" data-id="cfd62d5"
-						data-element_type="container">
-						<div
-							class="elementor-element elementor-element-3217de0 elementor-view-stacked elementor-shape-circle elementor-position-top elementor-mobile-position-top elementor-widget elementor-widget-icon-box"
-							data-id="3217de0" data-element_type="widget" data-widget_type="icon-box.default">
-							<div class="elementor-widget-container">
-								<div class="elementor-icon-box-wrapper">
 
-									<div class="elementor-icon-box-content">
-
-										<h3 class="elementor-icon-box-title">
-											<span>3. Analysis and Reporting</span>
-										</h3>
-
-										<p class="elementor-icon-box-description">
-											We deliver detailed reports that identify vulnerabilities and provide actionable insights for
-											mitigation.
-										</p>
-
+								<div class="timeline-step">
+									<div class="dot"></div>
+									<div class="content">
+										<h2>Analysis and Reporting</h2>
+										<p>We deliver detailed reports that identify vulnerabilities and provide actionable insights for
+											mitigation.</p>
 									</div>
-
 								</div>
-							</div>
-						</div>
-						<div
-							class="elementor-element elementor-element-b715089 elementor-view-stacked elementor-shape-circle elementor-position-top elementor-mobile-position-top elementor-widget elementor-widget-icon-box"
-							data-id="b715089" data-element_type="widget" data-widget_type="icon-box.default">
-							<div class="elementor-widget-container">
-								<div class="elementor-icon-box-wrapper">
 
-
-									<div class="elementor-icon-box-content">
-
-										<h3 class="elementor-icon-box-title">
-											<span>4. Remediation Guidance</span>
-										</h3>
-
-										<p class="elementor-icon-box-description">
-											We assist your team in fixing the vulnerabilities, ensuring your environment is protected from
-											future attacks.
-										</p>
-
+								<div class="timeline-step">
+									<div class="dot"></div>
+									<div class="content">
+										<h2>Remediation Guidance</h2>
+										<p>We assist your team in fixing the vulnerabilities, ensuring your environment is protected from
+											future attacks.</p>
 									</div>
-
 								</div>
 							</div>
 						</div>
-					</div>
+					</section>
 
 				</div>
 				<div class="elementor-element elementor-element-e240be0 e-con-full e-flex e-con e-child" data-id="e240be0"
@@ -1328,6 +1197,8 @@
 			</div>
 		</div>
 	</div>
+
+
 	<div class="ekit-template-content-markup ekit-template-content-footer ekit-template-content-theme-support">
 		<div data-elementor-type="wp-post" data-elementor-id="1365" class="elementor elementor-1365">
 			<div class="elementor-element elementor-element-25414c7 e-flex e-con-boxed e-con e-parent" data-id="25414c7"
