--- a/services/Web-Development/index.html
+++ b/services/Web-Development/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Web Development &#8211; Duradars</title>
-
+	<link rel="stylesheet" href="../services.css">
 	<link rel="stylesheet" href="../../assets/font-awesome-pro-master/css/all.min.css">
 
 	<meta name='robots' content='max-image-preview:large' />
@@ -1047,100 +1047,47 @@
 							</div>
 						</div>
 					</div>
-					<div class="elementor-element elementor-element-9727257 e-con-full e-flex e-con e-child" data-id="9727257"
-						data-element_type="container">
-						<div
-							class="elementor-element elementor-element-9b0ca51 elementor-view-stacked elementor-shape-circle elementor-position-top elementor-mobile-position-top elementor-widget elementor-widget-icon-box"
-							data-id="9b0ca51" data-element_type="widget" data-widget_type="icon-box.default">
-							<div class="elementor-widget-container">
-								<div class="elementor-icon-box-wrapper">
 
-
-									<div class="elementor-icon-box-content">
-
-										<h3 class="elementor-icon-box-title">
-											<span>1. Discovery & Planning</span>
-										</h3>
-
-										<p class="elementor-icon-box-description">
-											We start with a deep dive into your goals, audience, and technical requirements to create a clear roadmap for development.
-										</p>
-
+					<section class="process-section">
+						<div class="container">
+							<h1 class="section-title">Process</h1>
+							<div class="timeline">
+								<div class="timeline-step">
+									<div class="dot"></div>
+									<div class="content">
+										<h2>Discovery & Planning</h2>
+										<p>We start with a deep dive into your goals, audience, and technical requirements to create a clear roadmap for development.</p>
 									</div>
-
 								</div>
+
+								<div class="timeline-step">
+									<div class="dot"></div>
+									<div class="content">
+										<h2>Design & Development</h2>
+										<p>We bring your vision to life with clean code, stunning design, and responsive layouts — all built using industry best practices.</p>
+									</div>
+								</div>
+
+								<div class="timeline-step">
+									<div class="dot"></div>
+									<div class="content">
+										<h2>Testing & Deployment</h2>
+										<p>Rigorous testing ensures your site is secure, bug-free, and high-performing before going live.</p>
+									</div>
+								</div>
+
+								<div class="timeline-step">
+									<div class="dot"></div>
+									<div class="content">
+										<h2>Ongoing Support</h2>
+										<p>Post-launch, we offer maintenance, updates, and continuous improvements to keep your website running at its best.</p>
+									</div>
+								</div>
+
 							</div>
 						</div>
-						<div
-							class="elementor-element elementor-element-ff4921e elementor-view-stacked elementor-shape-circle elementor-position-top elementor-mobile-position-top elementor-widget elementor-widget-icon-box"
-							data-id="ff4921e" data-element_type="widget" data-widget_type="icon-box.default">
-							<div class="elementor-widget-container">
-								<div class="elementor-icon-box-wrapper">
+					</section>
 
-
-
-									<div class="elementor-icon-box-content">
-
-										<h3 class="elementor-icon-box-title">
-											<span>2. Design & Development</span>
-										</h3>
-
-										<p class="elementor-icon-box-description">
-											We bring your vision to life with clean code, stunning design, and responsive layouts — all built using industry best practices.
-										</p>
-
-									</div>
-
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="elementor-element elementor-element-cfd62d5 e-con-full e-flex e-con e-child" data-id="cfd62d5"
-						data-element_type="container">
-						<div
-							class="elementor-element elementor-element-3217de0 elementor-view-stacked elementor-shape-circle elementor-position-top elementor-mobile-position-top elementor-widget elementor-widget-icon-box"
-							data-id="3217de0" data-element_type="widget" data-widget_type="icon-box.default">
-							<div class="elementor-widget-container">
-								<div class="elementor-icon-box-wrapper">
-
-									<div class="elementor-icon-box-content">
-
-										<h3 class="elementor-icon-box-title">
-											<span>3. Testing & Deployment</span>
-										</h3>
-
-										<p class="elementor-icon-box-description">
-											Rigorous testing ensures your site is secure, bug-free, and high-performing before going live.
-										</p>
-
-									</div>
-
-								</div>
-							</div>
-						</div>
-						<div
-							class="elementor-element elementor-element-b715089 elementor-view-stacked elementor-shape-circle elementor-position-top elementor-mobile-position-top elementor-widget elementor-widget-icon-box"
-							data-id="b715089" data-element_type="widget" data-widget_type="icon-box.default">
-							<div class="elementor-widget-container">
-								<div class="elementor-icon-box-wrapper">
-
-
-									<div class="elementor-icon-box-content">
-
-										<h3 class="elementor-icon-box-title">
-											<span>4. Ongoing Support</span>
-										</h3>
-
-										<p class="elementor-icon-box-description">
-											Post-launch, we offer maintenance, updates, and continuous improvements to keep your website running at its best.
-										</p>
-
-									</div>
-
-								</div>
-							</div>
-						</div>
-					</div>
 				</div>
 				<div class="elementor-element elementor-element-e240be0 e-con-full e-flex e-con e-child" data-id="e240be0"
 					data-element_type="container">
