--- a/services/Compliance-and-Regulatory-Audit/index.html
+++ b/services/Compliance-and-Regulatory-Audit/index.html
@@ -6,6 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Compliance and Regulatory Audit &#8211; Duradars</title>
 
+	<link rel="stylesheet" href="../services.css">
+
 	<link rel="stylesheet" href="../../assets/font-awesome-pro-master/css/all.min.css">
 
 	<meta name='robots' content='max-image-preview:large' />
@@ -1053,102 +1055,46 @@
 							</div>
 						</div>
 					</div>
-					<div class="elementor-element elementor-element-9727257 e-con-full e-flex e-con e-child" data-id="9727257"
-						data-element_type="container">
-						<div
-							class="elementor-element elementor-element-9b0ca51 elementor-view-stacked elementor-shape-circle elementor-position-top elementor-mobile-position-top elementor-widget elementor-widget-icon-box"
-							data-id="9b0ca51" data-element_type="widget" data-widget_type="icon-box.default">
-							<div class="elementor-widget-container">
-								<div class="elementor-icon-box-wrapper">
 
-
-									<div class="elementor-icon-box-content">
-
-										<h3 class="elementor-icon-box-title">
-											<span>1. Compliance Assessment</span>
-										</h3>
-
-										<p class="elementor-icon-box-description">
-											We begin by evaluating your current security measures against relevant compliance frameworks.
-										</p>
-
+					<section class="process-section">
+						<div class="container">
+							<h1 class="section-title">Process</h1>
+							<div class="timeline">
+								<div class="timeline-step">
+									<div class="dot"></div>
+									<div class="content">
+										<h2>Compliance Assessment</h2>
+										<p>We begin by evaluating your current security measures against relevant compliance frameworks.</p>
 									</div>
+								</div>
 
+								<div class="timeline-step">
+									<div class="dot"></div>
+									<div class="content">
+										<h2>Gap Analysis</h2>
+										<p>We identify any gaps between your current practices and the required standards.</p>
+									</div>
+								</div>
+
+								<div class="timeline-step">
+									<div class="dot"></div>
+									<div class="content">
+										<h2>Compliance Roadmap</h2>
+										<p>We provide a clear action plan to close those gaps and achieve full compliance.</p>
+									</div>
+								</div>
+
+								<div class="timeline-step">
+									<div class="dot"></div>
+									<div class="content">
+										<h2>Audit and Certification</h2>
+										<p>Our team helps you pass audits, ensuring your organization meets all required standards.</p>
+									</div>
 								</div>
 							</div>
 						</div>
-						<div
-							class="elementor-element elementor-element-ff4921e elementor-view-stacked elementor-shape-circle elementor-position-top elementor-mobile-position-top elementor-widget elementor-widget-icon-box"
-							data-id="ff4921e" data-element_type="widget" data-widget_type="icon-box.default">
-							<div class="elementor-widget-container">
-								<div class="elementor-icon-box-wrapper">
+					</section>
 
-
-
-									<div class="elementor-icon-box-content">
-
-										<h3 class="elementor-icon-box-title">
-											<span>2. Gap Analysis</span>
-										</h3>
-
-										<p class="elementor-icon-box-description">
-											We identify any gaps between your current practices and the required standards.
-										</p>
-
-									</div>
-
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="elementor-element elementor-element-cfd62d5 e-con-full e-flex e-con e-child" data-id="cfd62d5"
-						data-element_type="container">
-						<div
-							class="elementor-element elementor-element-3217de0 elementor-view-stacked elementor-shape-circle elementor-position-top elementor-mobile-position-top elementor-widget elementor-widget-icon-box"
-							data-id="3217de0" data-element_type="widget" data-widget_type="icon-box.default">
-							<div class="elementor-widget-container">
-								<div class="elementor-icon-box-wrapper">
-
-									<div class="elementor-icon-box-content">
-
-										<h3 class="elementor-icon-box-title">
-											<span>3. Compliance Roadmap</span>
-										</h3>
-
-										<p class="elementor-icon-box-description">
-											We provide a clear action plan to close those gaps and achieve full compliance.
-										</p>
-
-									</div>
-
-								</div>
-							</div>
-							
-						</div>
-
-						<div
-							class="elementor-element elementor-element-b715089 elementor-view-stacked elementor-shape-circle elementor-position-top elementor-mobile-position-top elementor-widget elementor-widget-icon-box"
-							data-id="b715089" data-element_type="widget" data-widget_type="icon-box.default">
-							<div class="elementor-widget-container">
-								<div class="elementor-icon-box-wrapper">
-
-
-									<div class="elementor-icon-box-content">
-
-										<h3 class="elementor-icon-box-title">
-											<span>4. Audit and Certification</span>
-										</h3>
-
-										<p class="elementor-icon-box-description">
-											Our team helps you pass audits, ensuring your organization meets all required standards.
-										</p>
-
-									</div>
-
-								</div>
-							</div>
-						</div>
-					</div>
 				</div>
 
 				<div class="elementor-element elementor-element-e240be0 e-con-full e-flex e-con e-child" data-id="e240be0"
