Testimonial and Team page added

--- a/process/index.html
+++ b/process/index.html
@@ -1277,7 +1277,7 @@
 										<li class="elementor-icon-list-item">
 											<!-- <span class="elementor-icon-list-icon">
 												<i class="fad fa-chart-pie"></i></span> -->
-											<a href="/process/" class="elementor-icon-list-text">Process</a>
+											<a href="/team/" class="elementor-icon-list-text">Team</a>
 										</li>
 										<li class="elementor-icon-list-item">
 											<!-- <span class="elementor-icon-list-icon">
