--- a/contact/index.html
+++ b/contact/index.html
@@ -874,11 +874,11 @@
 																class=" dropdown-item">Web Development</a></li>
 													</ul>
 												</li>
-												<!-- <li id="menu-item-59"
+												<li id="menu-item-59"
 													class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-59 nav-item elementskit-dropdown-has relative_position elementskit-dropdown-menu-default_width elementskit-mobile-builder-content"
-													data-vertical-menu=750px><a href="/process/"
-														class="ekit-menu-nav-link ekit-menu-dropdown-toggle">Process</a>
-												</li> -->
+													data-vertical-menu=750px><a href="/team/"
+														class="ekit-menu-nav-link ekit-menu-dropdown-toggle">Team</a>
+												</li>
 												<li hidden id="menu-item-1861"
 													class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-1861 nav-item elementskit-dropdown-has relative_position elementskit-dropdown-menu-default_width elementskit-mobile-builder-content"
 													data-vertical-menu=750px><a href="#"
@@ -1282,7 +1282,7 @@
 										<li class="elementor-icon-list-item">
 											<!-- <span class="elementor-icon-list-icon">
 												<i class="fad fa-chart-pie"></i></span> -->
-											<a href="/process/" class="elementor-icon-list-text">Process</a>
+											<a href="/team/" class="elementor-icon-list-text">Team</a>
 										</li>
 										<li class="elementor-icon-list-item">
 											<!-- <span class="elementor-icon-list-icon">
