--- a/services/OSINT/index.html
+++ b/services/OSINT/index.html
@@ -4,6 +4,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<link rel="icon" type="image/jpeg" href="/assets/icon-bro-CankwgKx.jpeg">
+
 	<title>OSINT &#8211; Duradars</title>
 
 	<link rel="stylesheet" href="../services.css">
@@ -790,11 +792,11 @@
 																	class=" dropdown-item">Web Development</a></li>
 														</ul>
 													</li>
-												<!-- <li id="menu-item-59"
+												<li id="menu-item-59"
 													class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-59 nav-item elementskit-dropdown-has relative_position elementskit-dropdown-menu-default_width elementskit-mobile-builder-content"
-													data-vertical-menu=750px><a href="/process/"
-														class="ekit-menu-nav-link ekit-menu-dropdown-toggle">Process</a>
-												</li> -->
+													data-vertical-menu=750px><a href="/team/"
+														class="ekit-menu-nav-link ekit-menu-dropdown-toggle">Team</a>
+												</li>
 												<li hidden id="menu-item-1861"
 													class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-1861 nav-item elementskit-dropdown-has relative_position elementskit-dropdown-menu-default_width elementskit-mobile-builder-content"
 													data-vertical-menu=750px><a href="#"
@@ -1297,7 +1299,7 @@
 										<li class="elementor-icon-list-item">
 											<!-- <span class="elementor-icon-list-icon">
 												<i class="fad fa-chart-pie"></i></span> -->
-											<a href="/process/" class="elementor-icon-list-text">Process</a>
+											<a href="/team/" class="elementor-icon-list-text">Team</a>
 										</li>
 										<li class="elementor-icon-list-item">
 											<!-- <span class="elementor-icon-list-icon">
