Adout text fixed

--- a/about/index.html
+++ b/about/index.html
@@ -938,12 +938,12 @@
 
 					<div class="elementor-element elementor-element-382969c elementor-widget elementor-widget-text-editor"
 						data-id="382969c" data-element_type="widget" data-widget_type="text-editor.default">
-						<div class="elementor-widget-container" style="color: white;">
-							<p>At Duradars, we believe that in a world that’s constantly evolving online, your digital security should never be an afterthought.</p>
+						<div class="elementor-widget-container" style="color: white; text-align: justify;">
+							<p>At Duradars, we believe that in a world that's constantly evolving online, your digital security should never be an afterthought.</p>
 							<p>Founded in 2025, Duradars was born out of a simple yet powerful idea: to help individuals, businesses, and organizations protect what matters most in the digital space — their data, systems, and peace of mind.</p>
-							<p>We’re a team of cybersecurity experts, tech enthusiasts, and problem-solvers driven by a shared mission: to make the digital world safer, one solution at a time. Whether it’s defending against cyber threats, securing sensitive information, or building resilient systems, we work closely with our clients to deliver practical, future-ready cybersecurity services tailored to their needs.</p>
-							<p>What sets us apart isn’t just our technical skills — it’s our people-first approach. We take the time to understand your unique challenges, communicate in a way that makes sense, and stand by you at every step of your security journey.</p>
-							<p>At Duradars, your digital security is our priority — because behind every system, there’s someone who deserves to feel secure.</p>
+							<p>We're a team of cybersecurity experts, tech enthusiasts, and problem-solvers driven by a shared mission: to make the digital world safer, one solution at a time. Whether it's defending against cyber threats, securing sensitive information, or building resilient systems, we work closely with our clients to deliver practical, future-ready cybersecurity services tailored to their needs.</p>
+							<p>What sets us apart isn't just our technical skills — it's our people-first approach. We take the time to understand your unique challenges, communicate in a way that makes sense, and stand by you at every step of your security journey.</p>
+							<p>At Duradars, your digital security is our priority — because behind every system, there's someone who deserves to feel secure.</p>
 						</div>
 					</div>
 
